# Meeting-diary

./: .gitignore  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: audio-setup.md
resources/: entitlements.mac.plist
resources/icons/: icon.icns
scripts/: build_sidecar.py  create-resources.js  generate-icons.js  install-native-deps.js
sidecar/: pyproject.toml  requirements.txt  server.py
sidecar/meeting_processor/: pipeline.py  speaker_id.py
sidecar/tests/: benchmarks.py  test_pipeline.py  test_speaker_id.py
src/main/: index.ts
src/main/audio/: AudioRecorder.ts
src/main/ipc/: handlers.ts
src/main/native/: AudioCaptureStub.ts  NativeModuleLoader.ts
src/main/sidecar/: SidecarManager.ts
src/main/store/: MeetingStore.ts  SettingsStore.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html  types.d.ts
src/renderer/components/: EnrollModal.tsx  UpdateNotifier.tsx
src/renderer/pages/: DashboardPage.tsx  MeetingViewPage.tsx  SettingsPage.tsx
src/renderer/store/: appStore.ts
src/renderer/styles/: global.css
src/shared/: types.ts
tests/e2e/: app.spec.ts  playwright.config.ts
tests/unit/: meeting-store.test.ts  sidecar-manager.test.ts
