[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "meeting-recorder-sidecar"
version = "1.0.0"
description = "Python sidecar for meeting transcription and diarization"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "pyannote.audio>=4.0.0",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "numpy>=1.24.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "pydub>=0.25.1",
]

[tool.setuptools.packages.find]
include = ["meeting_processor*"]
